[package]
name = "chakra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.44.0"
futures = "0.3.21"   
async-std = { version = "1.10.0", features = ["attributes"] }
log = "0.4"
pretty_env_logger = "0.4.0"
termion = "1.5.6"